--- a/Peppermint/Base.lproj/Main.storyboard
+++ b/Peppermint/Base.lproj/Main.storyboard
@@ -39,7 +39,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lcd-bo-1RH" customClass="SwipeView">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background_gradient" translatesAutoresizingMaskIntoConstraints="NO" id="yIj-mg-WsJ">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                            </imageView>
+                            <view opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lcd-bo-1RH" customClass="SwipeView">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T7N-ky-1Pr">
@@ -91,7 +94,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstItem="peY-rl-asT" firstAttribute="leading" secondItem="T7N-ky-1Pr" secondAttribute="trailing" constant="11" id="0U9-Bz-Jxe"/>
                                     <constraint firstAttribute="bottom" secondItem="peY-rl-asT" secondAttribute="bottom" constant="22" id="OPc-o2-FY8"/>
@@ -108,8 +111,12 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="v6u-zx-4Dz" firstAttribute="top" secondItem="yIj-mg-WsJ" secondAttribute="bottom" id="3G5-xU-BPu"/>
+                            <constraint firstItem="yIj-mg-WsJ" firstAttribute="top" secondItem="7FG-oV-f4Q" secondAttribute="top" id="QFn-0n-nbo"/>
+                            <constraint firstItem="yIj-mg-WsJ" firstAttribute="leading" secondItem="7FG-oV-f4Q" secondAttribute="leading" id="eej-ja-81V"/>
                             <constraint firstItem="v6u-zx-4Dz" firstAttribute="top" secondItem="Lcd-bo-1RH" secondAttribute="bottom" id="hBg-pO-GnP"/>
                             <constraint firstItem="Lcd-bo-1RH" firstAttribute="leading" secondItem="7FG-oV-f4Q" secondAttribute="leading" id="l6I-B9-SAk"/>
+                            <constraint firstAttribute="trailing" secondItem="yIj-mg-WsJ" secondAttribute="trailing" id="m3b-9L-vSF"/>
                             <constraint firstAttribute="trailing" secondItem="Lcd-bo-1RH" secondAttribute="trailing" id="t5S-ZI-MuX"/>
                             <constraint firstItem="Lcd-bo-1RH" firstAttribute="top" secondItem="7FG-oV-f4Q" secondAttribute="top" id="xor-Zg-oil"/>
                         </constraints>
@@ -241,6 +248,13 @@
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7zR-tD-HrX" userLabel="SendingIndicatorView">
                                 <rect key="frame" x="0.0" y="671" width="414" height="65"/>
                                 <subviews>
+                                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gkl-pL-Y4B" userLabel="SeperatorView">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1"/>
+                                        <color key="backgroundColor" red="1" green="0.0" blue="0.050213125070000003" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1" id="sun-NW-cI5"/>
+                                        </constraints>
+                                    </view>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_message_sending" translatesAutoresizingMaskIntoConstraints="NO" id="ZTG-t4-EfW">
                                         <rect key="frame" x="74" y="18" width="266" height="30"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -248,9 +262,12 @@
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstItem="gkl-pL-Y4B" firstAttribute="top" secondItem="7zR-tD-HrX" secondAttribute="top" id="AUx-xb-KvR"/>
                                     <constraint firstItem="ZTG-t4-EfW" firstAttribute="top" secondItem="7zR-tD-HrX" secondAttribute="top" constant="18" id="O2o-O9-tTP"/>
                                     <constraint firstAttribute="trailing" secondItem="ZTG-t4-EfW" secondAttribute="trailing" constant="74" id="QPO-gg-rNJ"/>
+                                    <constraint firstAttribute="trailing" secondItem="gkl-pL-Y4B" secondAttribute="trailing" id="XqX-jF-9C3"/>
                                     <constraint firstItem="ZTG-t4-EfW" firstAttribute="leading" secondItem="7zR-tD-HrX" secondAttribute="leading" constant="74" id="eFq-xr-wgd"/>
+                                    <constraint firstItem="gkl-pL-Y4B" firstAttribute="leading" secondItem="7zR-tD-HrX" secondAttribute="leading" id="gqr-9k-QXG"/>
                                     <constraint firstAttribute="height" constant="65" id="mc3-hf-htx"/>
                                     <constraint firstAttribute="bottom" secondItem="ZTG-t4-EfW" secondAttribute="bottom" constant="17" id="pdQ-hT-Map"/>
                                 </constraints>
@@ -284,6 +301,7 @@
                         <outlet property="searchMenuView" destination="mZU-e0-vbZ" id="zZ2-Yx-Tqe"/>
                         <outlet property="sendingImageView" destination="ZTG-t4-EfW" id="qf5-9A-rNR"/>
                         <outlet property="sendingIndicatorView" destination="7zR-tD-HrX" id="aPf-8b-ADq"/>
+                        <outlet property="seperatorView" destination="gkl-pL-Y4B" id="jur-Qn-UjK"/>
                         <outlet property="tableView" destination="BhH-Ju-VVT" id="B8Q-tY-IdA"/>
                         <outlet property="tableViewBottomConstraint" destination="11Q-5a-Iz0" id="FDS-Yb-JA6"/>
                         <segue destination="72p-Nj-Mys" kind="show" identifier="RecordingViewControllerSegue" id="U7X-PO-uZJ"/>
@@ -550,6 +568,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="background_gradient" width="1" height="1136"/>
         <image name="button_pause" width="320" height="128"/>
         <image name="button_pause_pressed" width="320" height="128"/>
         <image name="button_rerecord" width="320" height="128"/>
