--- a/Peppermint/Base.lproj/Main.storyboard
+++ b/Peppermint/Base.lproj/Main.storyboard
@@ -154,7 +154,7 @@
                                     </imageView>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="_Placeholder" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uAf-dO-WUM">
                                         <rect key="frame" x="25" y="27" width="291" height="30"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="done"/>
                                     </textField>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_down" translatesAutoresizingMaskIntoConstraints="NO" id="W29-cZ-jxx">
@@ -256,21 +256,37 @@
                                         </constraints>
                                     </view>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_message_sending" translatesAutoresizingMaskIntoConstraints="NO" id="ZTG-t4-EfW">
-                                        <rect key="frame" x="74" y="18" width="266" height="30"/>
+                                        <rect key="frame" x="74" y="23" width="266" height="20"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="NP8-fL-any"/>
+                                        </constraints>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstAttribute="centerY" secondItem="ZTG-t4-EfW" secondAttribute="centerY" id="4OT-Tq-8mf"/>
                                     <constraint firstItem="gkl-pL-Y4B" firstAttribute="top" secondItem="7zR-tD-HrX" secondAttribute="top" id="AUx-xb-KvR"/>
+                                    <constraint firstItem="ZTG-t4-EfW" firstAttribute="leading" secondItem="7zR-tD-HrX" secondAttribute="leading" constant="74" id="HjY-P1-Qvs"/>
                                     <constraint firstItem="ZTG-t4-EfW" firstAttribute="top" secondItem="7zR-tD-HrX" secondAttribute="top" constant="18" id="O2o-O9-tTP"/>
                                     <constraint firstAttribute="trailing" secondItem="ZTG-t4-EfW" secondAttribute="trailing" constant="74" id="QPO-gg-rNJ"/>
+                                    <constraint firstAttribute="trailing" secondItem="ZTG-t4-EfW" secondAttribute="trailing" constant="74" id="Txb-GD-bT8"/>
                                     <constraint firstAttribute="trailing" secondItem="gkl-pL-Y4B" secondAttribute="trailing" id="XqX-jF-9C3"/>
                                     <constraint firstItem="ZTG-t4-EfW" firstAttribute="leading" secondItem="7zR-tD-HrX" secondAttribute="leading" constant="74" id="eFq-xr-wgd"/>
+                                    <constraint firstAttribute="centerY" secondItem="ZTG-t4-EfW" secondAttribute="centerY" id="gIe-IK-I0L"/>
                                     <constraint firstItem="gkl-pL-Y4B" firstAttribute="leading" secondItem="7zR-tD-HrX" secondAttribute="leading" id="gqr-9k-QXG"/>
                                     <constraint firstAttribute="height" constant="65" id="mc3-hf-htx"/>
-                                    <constraint firstAttribute="bottom" secondItem="ZTG-t4-EfW" secondAttribute="bottom" constant="17" id="pdQ-hT-Map"/>
+                                    <constraint firstAttribute="bottom" secondItem="ZTG-t4-EfW" secondAttribute="bottom" constant="27" id="pdQ-hT-Map"/>
                                 </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="O2o-O9-tTP"/>
+                                        <exclude reference="QPO-gg-rNJ"/>
+                                        <exclude reference="eFq-xr-wgd"/>
+                                        <exclude reference="gIe-IK-I0L"/>
+                                        <exclude reference="pdQ-hT-Map"/>
+                                    </mask>
+                                </variation>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -299,6 +315,7 @@
                         <outlet property="loadingView" destination="xd7-a5-1Sz" id="anx-3W-hck"/>
                         <outlet property="searchContactsTextField" destination="uAf-dO-WUM" id="nA1-4S-XXK"/>
                         <outlet property="searchMenuView" destination="mZU-e0-vbZ" id="zZ2-Yx-Tqe"/>
+                        <outlet property="sendingImageHeightConstraint" destination="NP8-fL-any" id="208-vg-zI7"/>
                         <outlet property="sendingImageView" destination="ZTG-t4-EfW" id="qf5-9A-rNR"/>
                         <outlet property="sendingIndicatorView" destination="7zR-tD-HrX" id="aPf-8b-ADq"/>
                         <outlet property="seperatorView" destination="gkl-pL-Y4B" id="jur-Qn-UjK"/>
