--- a/Peppermint/ContactTableViewCell.xib
+++ b/Peppermint/ContactTableViewCell.xib
@@ -3,18 +3,19 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ContactTableViewCell" rowHeight="56" id="8e4-VB-87A" customClass="ContactTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="56"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8e4-VB-87A" id="ejf-Un-hy5">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aEQ-5s-Sav" userLabel="Seperator View">
-                        <rect key="frame" x="0.0" y="54" width="320" height="1"/>
+                        <rect key="frame" x="0.0" y="54" width="414" height="1"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="HY2-5E-NHW"/>
@@ -27,7 +28,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_ContactName" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lwr-bI-hp8">
-                        <rect key="frame" x="54" y="8" width="256" height="21"/>
+                        <rect key="frame" x="54" y="8" width="320" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="N1G-JJ-pfS"/>
                         </constraints>
@@ -46,7 +47,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_via_Information" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qhu-no-qln">
-                        <rect key="frame" x="75" y="24" width="231" height="26"/>
+                        <rect key="frame" x="75" y="24" width="299" height="26"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="26" id="ywC-Gm-RzA"/>
                         </constraints>
@@ -54,8 +55,15 @@
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_all" translatesAutoresizingMaskIntoConstraints="NO" id="c6S-OH-FxE">
+                        <rect key="frame" x="379" y="21" width="14" height="14"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="14" id="Hc4-dD-zPb"/>
+                            <constraint firstAttribute="width" constant="14" id="cAv-2g-5xj"/>
+                        </constraints>
+                    </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9h8-TZ-qu8" userLabel="CellActionButton">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="55"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="55"/>
                         <gestureRecognizers/>
                         <state key="normal">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -77,22 +85,30 @@
                     <constraint firstItem="9h8-TZ-qu8" firstAttribute="top" secondItem="ejf-Un-hy5" secondAttribute="top" id="2Fu-b4-URx"/>
                     <constraint firstItem="uAi-pa-EQU" firstAttribute="top" secondItem="ejf-Un-hy5" secondAttribute="top" constant="24" id="5Rn-4f-bCw"/>
                     <constraint firstItem="uAi-pa-EQU" firstAttribute="leading" secondItem="1G5-fy-gLb" secondAttribute="trailing" constant="8" id="5ej-SP-vXh"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="c6S-OH-FxE" secondAttribute="trailing" constant="21" id="8vG-SK-hk7"/>
+                    <constraint firstAttribute="trailing" secondItem="c6S-OH-FxE" secondAttribute="trailing" constant="21" id="B63-1D-etj"/>
                     <constraint firstAttribute="trailing" secondItem="aEQ-5s-Sav" secondAttribute="trailing" id="C2v-Bc-bQy"/>
                     <constraint firstItem="Lwr-bI-hp8" firstAttribute="top" secondItem="ejf-Un-hy5" secondAttribute="top" constant="8" id="DHl-Ge-UpB"/>
                     <constraint firstAttribute="trailing" secondItem="9h8-TZ-qu8" secondAttribute="trailing" id="G3Q-78-E0j"/>
                     <constraint firstItem="Qhu-no-qln" firstAttribute="top" secondItem="ejf-Un-hy5" secondAttribute="top" constant="24" id="ImA-A3-kgR"/>
                     <constraint firstItem="Lwr-bI-hp8" firstAttribute="leading" secondItem="1G5-fy-gLb" secondAttribute="trailing" constant="8" id="LZW-xD-sh4"/>
                     <constraint firstItem="aEQ-5s-Sav" firstAttribute="leading" secondItem="ejf-Un-hy5" secondAttribute="leading" id="T1O-ci-IwN"/>
-                    <constraint firstAttribute="trailing" secondItem="Qhu-no-qln" secondAttribute="trailing" constant="14" id="U9j-3Q-2HP"/>
-                    <constraint firstAttribute="trailing" secondItem="Lwr-bI-hp8" secondAttribute="trailing" constant="10" id="Zts-SD-QRz"/>
+                    <constraint firstAttribute="trailing" secondItem="Qhu-no-qln" secondAttribute="trailing" constant="40" id="U9j-3Q-2HP"/>
+                    <constraint firstAttribute="trailing" secondItem="Lwr-bI-hp8" secondAttribute="trailing" constant="40" id="Zts-SD-QRz"/>
                     <constraint firstItem="1G5-fy-gLb" firstAttribute="top" secondItem="ejf-Un-hy5" secondAttribute="top" constant="10" id="bDo-0S-BDQ"/>
                     <constraint firstItem="9h8-TZ-qu8" firstAttribute="leading" secondItem="ejf-Un-hy5" secondAttribute="leading" id="lbc-pb-MIJ"/>
                     <constraint firstAttribute="bottom" secondItem="9h8-TZ-qu8" secondAttribute="bottom" id="qGD-ZP-1sN"/>
+                    <constraint firstAttribute="centerY" secondItem="c6S-OH-FxE" secondAttribute="centerY" id="u8w-pq-dqK"/>
                     <constraint firstAttribute="bottom" secondItem="aEQ-5s-Sav" secondAttribute="bottom" id="wxc-Nh-MF3"/>
                     <constraint firstItem="aEQ-5s-Sav" firstAttribute="top" secondItem="1G5-fy-gLb" secondAttribute="bottom" constant="9" id="xS1-aO-lqk"/>
                     <constraint firstItem="1G5-fy-gLb" firstAttribute="leading" secondItem="ejf-Un-hy5" secondAttribute="leading" constant="11" id="y4P-bU-8s1"/>
                     <constraint firstItem="Qhu-no-qln" firstAttribute="leading" secondItem="uAi-pa-EQU" secondAttribute="trailing" constant="-4" id="zJK-Kg-KRI"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="8vG-SK-hk7"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="avatarImageView" destination="1G5-fy-gLb" id="ho6-S4-xrJ"/>
@@ -101,8 +117,12 @@
                 <outlet property="contactNameLabel" destination="Lwr-bI-hp8" id="buE-gG-wER"/>
                 <outlet property="contactViaCaptionLabel" destination="uAi-pa-EQU" id="ptM-pM-6uf"/>
                 <outlet property="contactViaInformationLabel" destination="Qhu-no-qln" id="vdR-IG-Qc3"/>
+                <outlet property="rightIconImageView" destination="c6S-OH-FxE" id="20x-4t-0SI"/>
             </connections>
             <point key="canvasLocation" x="304" y="275"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="icon_all" width="14" height="14"/>
+    </resources>
 </document>
